--- a/style/style.css
+++ b/style/style.css
@@ -76,3 +76,8 @@ li:hover .submenu{
     border-top: 1px solid black;
     border-bottom: 1px solid black;  
 }
+#a{
+    font-size:100px;
+    align: center;
+    margin:10px auto;
+}
