--- a/1,2,3pr/style/style.css
+++ b/1,2,3pr/style/style.css
@@ -164,3 +164,18 @@ a{
     animation-name: fade;
     animation-duration: 1s;
 }
+.block{
+    cursor: pointer;
+    margin: 0 auto;
+    width: 100px;
+    height: 80px;
+    background-color: red;
+    transition: 0.3s ease;
+}
+.block_b{
+    cursor: pointer;
+    width: 100%;
+    height: 80px;
+    background-color: black;
+    transition: 0.3s ease;
+}
