--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+
 a{
     text-decoration: none;
     color:#FFF8DC;
@@ -28,6 +29,7 @@ a{
     color: #5F9EA0; 
 }
 .btn{
+    color: #FFF8DC;
     font-size: 20px;
     margin-left: auto;
     margin-right: 100px;
